# letsboardgame

./: .gitignore  Cargo.toml  Makefile  README.md
client/: Cargo.toml
client/src/: lib.rs  shader.rs  start.rs  vbo.rs
client/src/core/: program.rs  shader.rs  types.rs
client/src/models/: mod.rs  sphere.rs  torus.rs
client/src/original/: main.js  mod.rs
client/src/programs/: standard.frag  standard.rs  standard.vert
client/src/webgl/: buffers.rs  context.rs  mod.rs  program.rs  shader.rs  vbo.rs
examples/light-torus/: Cargo.toml  Makefile
examples/light-torus/src/: lib.rs
examples/light-torus/www/: index.html
napier-core/: Cargo.toml
napier-core/src/: context.rs  shader.rs
napier-webgl/: Cargo.toml
napier-webgl/src/: lib.rs  program.rs
napier-window/: Cargo.toml
napier-window/src/: canvas.rs  event.rs  lib.rs  window.rs
server/: Cargo.toml
src/: camera.rs  cell.rs  lib.rs  light.rs  object.rs  renderer.rs  scene.rs  shared.rs  texture.rs
src/core/: buffers.rs  color.rs  context.rs  mod.rs  program.rs  shader.rs  texture.rs  types.rs
src/meshes/: mod.rs  rect.rs  sphere.rs  torus.rs
src/original/: main.js  mod.rs
src/programs/: basic-gouraud.vert  basic-phong.frag  basic.rs  gouraud.rs  gouraud.vert  mod.rs  phong.frag  phong.rs  phong.vert  point_light.frag  point_light.rs  point_light.vert  standard.frag  standard.rs  standard.vert  texture-gouraud.frag  texture-gouraud.vert  texture-phong.frag  texture-phong.vert  texture.rs  texture_gouraud.vert
tests/: min_matrix.rs
www/: index.html
