[package]
name = "napier"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[dependencies]

cgmath = "0.17.0"
console_error_panic_hook = "0.1.6"
derive_more = "0.99.9"
gloo-timers = { version = "0.2.1", features = ["futures"] }
image = "0.23.8"
js-sys = "0.3.41"
log = "0.4.11"
napier-core = { path = "napier-core" }
palette = "0.5.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.14"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "Node",
  "WebGlBuffer",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "Window"
]

[dev-dependencies]
approx = "0.3"
wasm-bindgen-test = "0.3.0"
