[package]
name = "lbg-client"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.17.0"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.41"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement",
  "Node",
  "WebGlBuffer",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlUniformLocation",
  "Window"
]
