[package]
name = "napier-core"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "0.17.0"
js-sys = "0.3.41"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "HtmlElement",
  "HtmlCanvasElement",
  "Node",
  "WebGlBuffer",
  "WebGlRenderingContext",
  "WebGlProgram",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
