[package]
name = "napier-window"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.5"
gloo-events = "0.1.1"
log = "0.4.11"
pin-project = "0.4.23"
wasm-bindgen = "0.2.67"

[dependencies.web-sys]
version = "0.3"
features = [
  "EventTarget",
  "TouchEvent"
]
