[package]
name = "light-torus"
version = "0.1.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.17.0"
gloo-timers = { version = "0.2.1", features = ["futures"] }
image = "0.23.8"
three-wasm = { path = "../../" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.14"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlCanvasElement"
]
